# e6-pr-review-agent

./: .env.example  .gitignore  action.yml  pyproject.toml
.github/workflows/: ci.yml  review.yml
agent/: ai_client.py  diff_parser.py  github_client.py  main.py  models.py  prompts.py  reviewer.py
tests/: test_ai_client.py  test_diff_parser.py  test_integration.py  test_logging_suggestions.py  test_reviewer.py
